//
// Protocol buffers definition for Dadkvs Paxos Service
//
syntax = "proto3";
package dadkvs;

message Prepare {
  int32 phase1config = 1;
  int32 seqNum = 2;
  int32 priority = 3;
}

message Promise {
  int32 phase1config = 1;
  int32 seqNum = 2;
  bool accepted = 3;
  int32 phase1value = 4;
  int32 priority = 5;
}

message Accept {
  int32 phase2config = 1;
  int32 seqNum = 2;
  int32 phase2value = 3;
  int32 priority = 4;
}

message Accepted {
  int32 phase2config = 1;
  int32 seqNum = 2;
  bool phase2accepted = 3;
}

message LearnRequest {
  int32 learnConfig = 1;
  int32 seqNum = 2;
  int32 learnValue = 3;
  int32 priority = 4;
}

message LearnReply {
  int32 learnConfig = 1;
  int32 seqNum = 2;
  bool learnAccepted = 3;
}

service DadkvsPaxosService {
  rpc phaseOne (Prepare) returns (Promise);
  rpc phaseTwo (Accept) returns (Accepted);
  rpc learn (LearnRequest) returns (LearnReply);
}
